UI features complete

--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    
+    <br>
+    <h2>Make your Selection</h2>
+    <br>
+    <ul id="selections">
+        <li><Button class="selection" id="rock">Rock</Button></li>
+        <li><Button class="selection" id="paper">Paper</Button></li>
+        <li><Button class="selection" id="scissors">Scissors</Button></li>
+    </ul>
+    <br>
+    <h2 id="playerSelection"></h2>
+    <h2 id="cpuSelection"></h2>
+    <!-- <h3 id="cpuChoice"></h3> -->
+    <br>
+    <h2 id="result"></h2>
+    <br>
+    <h2 id="score"></h2>
 </body>
 </html>
